--- a/templates/ajax/soul/town_list.html.twig
+++ b/templates/ajax/soul/town_list.html.twig
@@ -66,7 +66,7 @@
                 {% else %}
                     <div>
                         <img alt="" src="{{ asset('build/images/icons/small_warning.gif') }}">
-                        <div class="tooltip help">The soulpoints of this town has been deleted</div>
+                        <div class="tooltip help">{{ 'Die Seelenpunkte dieser Stadt wurden gelöscht'|trans({}, 'soul') }}</div>
                     </div>
                 {% endif %}
             </div>
