Add titles, fix resetflag removal

--- a/templates/ajax/admin/users/ban.html.twig
+++ b/templates/ajax/admin/users/ban.html.twig
@@ -1,5 +1,5 @@
 {% extends "ajax/ajax.html.twig" %}
-{% block title %}{% trans from 'admin' %}Verbannung{% endtrans %}{%  endblock %}
+{% block title %}{% trans from 'admin' %}Verbannung{% endtrans %} - {{ user.name }}{%  endblock %}
 {% block ajax %}
     <div class="row soul">
 
