--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -622,6 +622,20 @@ ul.list{
   position: relative;
 }
 
+.gazette-search {
+  margin-left: 35px;
+  color: #f0d79e;
+
+  div>h2 {
+    margin-top: 0;
+    background-image: none;
+  }
+
+  div>div>select {
+    margin-bottom: 2px;
+  }
+}
+
 #gazette {
   .newspage {
     width: 435px;
