--- a/templates/ajax/game/newspaper.html.twig
+++ b/templates/ajax/game/newspaper.html.twig
@@ -6,9 +6,10 @@
 {% endblock %}
 {% block ajax %}
     {{ parent() }}
-    <div class="row">
-        <div class="padded cell rw-12">
+    <div>
+        <div>
             <input type="checkbox" name="gazette-switch" id="gazette-switch" />
+            
             {% include 'ajax/game/gazette_widget.html.twig' with { gazette: gazette, council: council } %}
 
             {% if citizensWithRole|length > 0 or votesNeeded|length > 0 %}
@@ -28,21 +29,21 @@
             </div>
             {% endif %}
 
-            <div class="row">
-                <div class="cell padded rw-4">
+            <div class="row gazette-search">
+                <div class="note cell padded rw-3">
                     {% if show_register %}
-                    <h5>{{ 'Das Register filtern'|trans({}, 'game') }}</h5>
-                    <div class="note row">
-                        <label for="citizen-filter" class="cell rw-4 rw-sm-12">{{ 'Bürger:'|trans({}, 'game') }}</label>
-                        <select id="citizen-filter" name="citizen-filter" class="cell rw-8 rw-sm-12 mb-1" x-filter-name="citizen">
+                    <h2 class="page-head">{{ 'Das Register filtern'|trans({}, 'game') }}</h2>
+                    <div class="row">
+                        <label for="citizen-filter" class="cell rw-4 rw-lg-12">{{ 'Bürger:'|trans({}, 'game') }}</label>
+                        <select id="citizen-filter" name="citizen-filter" class="cell rw-8 rw-lg-12" x-filter-name="citizen">
                             <option value="-1">[ {{ 'Alles sehen'|trans({}, 'game')}} ]</option>
                             {% for citizen in town.citizens|sort((a,b) => a.name|lower <=> b.name|lower) %}
                             <option value="{{ citizen.id }}">{% if not citizen.alive %}&dagger; {% endif %}{{ citizen.name }}</option>
                             {% endfor %}
                         </select>
 
-                        <label for="category-filter" class="cell rw-4 rw-sm-12">{{ 'Kategorie:'|trans({}, 'game') }}</label>
-                        <select id="category-filter" name="category-filter" class="cell rw-8 rw-sm-12" x-filter-name="category">
+                        <label for="category-filter" class="cell rw-4 rw-lg-12">{{ 'Kategorie:'|trans({}, 'game') }}</label>
+                        <select id="category-filter" name="category-filter" class="cell rw-8 rw-lg-12" x-filter-name="category">
                             <option value="-1">[ {{ 'Alles sehen'|trans({}, 'game')}} ]</option>
                             <option value="{{ constant('App\\Entity\\LogEntryTemplate::TypeCrimes') }}">{{ 'Verbrechen'|trans({}, 'game') }}</option>
                             <option value="{{ constant('App\\Entity\\LogEntryTemplate::TypeBank') }}">{{ 'Bank'|trans({}, 'game') }}</option>
@@ -58,7 +59,6 @@
                     {% endif %}
                 </div>
                 <div class="cell padded rw-8">
-                    <h5>{{ 'Stadtregister'|trans({},'game') }}</h5>
                     {% if show_register %}
                         {% embed "ajax/game/log.html.twig" with {'log_content': log, 'log_source': path('game_newspaper_log_controller') } %}
                         {% endembed %}
