--- a/templates/ajax/forum/posts.html.twig
+++ b/templates/ajax/forum/posts.html.twig
@@ -1,36 +1,39 @@
 {% extends "ajax/ajax_plain.html.twig" %}
 {% block ajax_base %}
-    {% macro icon_master(user) %}
-        {% if user|is_granted('ROLE_SUPER') %}
-            <div class="inline-block mh-icon">
-                <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_admin.gif') }}" />
-                <div class="tooltip">{{ 'Dieser Spieler ist ein Administrator auf diesem Server.'|trans({},'global') }}</div>
-            </div>
-        {% elseif user|is_granted('ROLE_ADMIN') %}
-            <div class="inline-block mh-icon">
-                <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_admin.gif') }}" />
-                <div class="tooltip">{{ 'Dieser Spieler ist ein Entwickler von MyHordes.'|trans({},'global') }}</div>
-            </div>
-        {% elseif user|is_granted('ROLE_CROW') %}
-            <div class="inline-block mh-icon">
-                <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_mod.gif') }}" />
-                <div class="tooltip">{{ 'Dieser Spieler ist ein Moderator auf MyHordes.'|trans({},'global') }}</div>
-            </div>
-        {% elseif user|is_granted('ROLE_ANIMAC') %}
-            <div class="inline-block mh-icon">
-                <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_anim.gif') }}" />
-                <div class="tooltip">{{ 'Dieser Spieler ist ein Animateur auf MyHordes.'|trans({},'global') }}</div>
-            </div>
-        {% elseif user|is_granted('ROLE_ORACLE') %}
-            <div class="inline-block mh-icon">
-                <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_orac.gif') }}" />
-                <div class="tooltip">{{ 'Dieser Spieler ist ein Orakel auf MyHordes.'|trans({},'global') }}</div>
-            </div>
-        {% elseif user|is_granted('ROLE_TEAM') %}
-            <div class="inline-block mh-icon">
-                <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_team.gif') }}" />
-                <div class="tooltip">{{ 'Dieser Spieler ist Mitglied des Entwickler-Teams von MyHordes.'|trans({},'global') }}</div>
-            </div>
+    {% macro icon_master(post) %}
+        {% set user = post.owner %}
+        {% if post.type != "USER" or post.thread.forum.town is null %}
+            {% if user|is_granted('ROLE_SUPER') %}
+                <div class="inline-block mh-icon">
+                    <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_admin.gif') }}" />
+                    <div class="tooltip">{{ 'Dieser Spieler ist ein Administrator auf diesem Server.'|trans({},'global') }}</div>
+                </div>
+            {% elseif user|is_granted('ROLE_ADMIN') %}
+                <div class="inline-block mh-icon">
+                    <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_admin.gif') }}" />
+                    <div class="tooltip">{{ 'Dieser Spieler ist ein Entwickler von MyHordes.'|trans({},'global') }}</div>
+                </div>
+            {% elseif user|is_granted('ROLE_CROW') %}
+                <div class="inline-block mh-icon">
+                    <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_mod.gif') }}" />
+                    <div class="tooltip">{{ 'Dieser Spieler ist ein Moderator auf MyHordes.'|trans({},'global') }}</div>
+                </div>
+            {% elseif user|is_granted('ROLE_ANIMAC') %}
+                <div class="inline-block mh-icon">
+                    <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_anim.gif') }}" />
+                    <div class="tooltip">{{ 'Dieser Spieler ist ein Animateur auf MyHordes.'|trans({},'global') }}</div>
+                </div>
+            {% elseif user|is_granted('ROLE_ORACLE') %}
+                <div class="inline-block mh-icon">
+                    <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_orac.gif') }}" />
+                    <div class="tooltip">{{ 'Dieser Spieler ist ein Orakel auf MyHordes.'|trans({},'global') }}</div>
+                </div>
+            {% elseif user|is_granted('ROLE_TEAM') %}
+                <div class="inline-block mh-icon">
+                    <img alt="MHA" src="{{ asset('build/images/icons/icon_mh_team.gif') }}" />
+                    <div class="tooltip">{{ 'Dieser Spieler ist Mitglied des Entwickler-Teams von MyHordes.'|trans({},'global') }}</div>
+                </div>
+            {% endif %}
         {% endif %}
     {% endmacro %}
 
@@ -228,7 +231,7 @@
                         {% else %}
                             <div class="avatar small"><img alt="" src="{{ asset('build/images/forum/empty_avatar.gif') }}"></div>
                         {% endif %}
-                        {% include 'ajax/soul/playername.html.twig' with {user: post.owner, globalSpace: post.thread.forum.town is null} only %}{{ post.translate ? ('') : (_self.icon_master(post.owner))}}<br />
+                        {% include 'ajax/soul/playername.html.twig' with {user: post.owner, globalSpace: post.thread.forum.town is null} only %}{{ post.translate ? ('') : (_self.icon_master(post))}}<br />
                         {% if post.owner.name == 'Der Rabe' %}
                             <span class="small"><i>{{ 'Ich beobachte euch...'|trans({},'game') }}</i></span>
                         {% elseif post.owner.activeTitle or post.owner.activeIcon %}
