--- a/templates/ajax/soul/future.html.twig
+++ b/templates/ajax/soul/future.html.twig
@@ -32,6 +32,18 @@
             </div>
         </div>
     </div>
+    {% if has_polls %}
+        <div class="row">
+            <div class="cell padded rw-12">
+                <div class="help">
+                    <b>{{ 'Schon gewusst?'|trans({},'global') }}</b>
+                    {{ 'Um den Kurs für die Weiterentwicklung von MyHordes zu bestimmen, führen wir regelmäßig Umfragen mit allen Spielern durch. Klicke den folgenden Button, um zu einer Übersicht aller aktuellen und vergangenen Umfragen zu gelangen.'|trans({},'soul') }}
+                    <div class="right"><button x-ajax-href="{{ path('soul_polls') }}" class="small inline">{{ 'Zu den Umfragen'|trans({},'soul') }}</button></div>
+                </div>
+            </div>
+        </div>
+
+    {% endif %}
     {% endif %}
 {% endblock %}
 {% block js %}
