--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -302,11 +302,11 @@ x-message {
     }
 
     .back-dash {
-      background: #00000000; color: #f0d79e; box-shadow: inset 0 0 4px #00000000; border: 1px solid #00000000;
+      color: #f0d79e; box-shadow: inset 0 0 4px #00000000; border: 1px solid #00000000;
       position: absolute; top: 188px; left: -8px; width: 117px; height: 37px;
       padding-top: 9.5px; padding-left: 26px; cursor: pointer;
       font-size: 1.0rem; font-weight: normal; font-variant: small-caps;
-      background-image: url("../img/game-bar/back_button.png");
+      background: url("../img/game-bar/back_button.png");
       &:hover { background-image: url("../img/game-bar/back_button_hover.png"); padding-top: 10.5px; }
     }
   }
@@ -1126,13 +1126,23 @@ div.game-menu-area {
             }
           }
           &.back-dash {
-			background: #00000000; color: #f0d79e; box-shadow: inset 0 0 4px #00000000; border: 1px solid #00000000;
-    		position: absolute; top: 35px; left: 0px; width: 117px; height: 37px;
+			color: #f0d79e; box-shadow: inset 0 0 4px #00000000; border: 1px solid #00000000;
+    		position: absolute; top: 35px; left: 0; width: 117px; height: 37px;
     		padding-top: 9.5px; padding-left: 26px;
     		font-size: 1.0rem; font-weight: normal; font-variant: small-caps;
-    		background-image: url("../img/game-bar/back_button.png");
+    		background: url("../img/game-bar/back_button.png");
           	&:hover { background-image: url("../img/game-bar/back_button_hover.png"); padding-top: 10.5px; }
           }
+          &.poll-dash {
+            color: #f0d79e; border: none; box-shadow: none;
+            position: absolute; top: 49px; left: 735px; width: 169px; height: 41px;
+            background: url('../img/background/sondagebt_bg.gif') center / cover no-repeat;
+            button {
+              position: absolute; width: 156px; min-height: auto; height: 20px; top: 19px;
+              left: 11px;
+            }
+          }
+
           &.forum:after     { background-image: url("../img/game-bar/forum.png"); top: -42px; }
           &.town-dash:after { background-image: url("../img/game-bar/play.png");}
           &.town-news:after { background-image: url("../img/game-bar/gazette.png");}
